WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306904
[Site-Isolation] Fix localFrame to remoteFrame synchronization
https://bugs.webkit.org/show_bug.cgi?id=306904
Summary
[Site-Isolation] Fix localFrame to remoteFrame synchronization
ccarley2
Reported
2026-02-03 15:03:24 PST
Page::syncLocalFrameInfoToRemote is incorrectly mapping over localFrame children, which causes an assert failure in LocalFrameView::visibleRectOfChild. A frame that is not a child is passed to this function.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-03 15:03:33 PST
<
rdar://problem/169568732
>
ccarley2
Comment 2
2026-02-03 15:09:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57815
EWS
Comment 3
2026-02-03 22:19:22 PST
Committed
306755@main
(9e7c8045de50): <
https://commits.webkit.org/306755@main
> Reviewed commits have been landed. Closing PR #57815 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug