[Site-Isolation] Fix localFrame to remoteFrame synchronization https://bugs.webkit.org/show_bug.cgi?id=306904 rdar://169568732

Reviewed by Simon Fraser.

Page::syncLocalFrameToRemote was incorrectly mapping over the child frames. It was calling FrameTree::traverseNextSkippingChildren
instead of FrameTree::nextSibling, which caused ASSERT(child.tree().parent()->frameID() == m_frame->frameID()) to fail in
LocalFrameView::visibleRectOfChild.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::syncLocalFrameInfoToRemote):

Canonical link: https://commits.webkit.org/306755@main